--- a/ahmad/html/jones.html
+++ b/ahmad/html/jones.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ajax</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Ajax play ground</h1>
 
-
-<div>
-<button >Get Time from Ruter</button>
-
-</div>
+<section><h1>Jones er Best som en hest</h1></section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-<script src="../js/ajax.js"></script>
-
+<script src="../js/scripts.js"></script>
 </body>
 </html>
-
