--- a/ahmad/html/jones.html
+++ b/ahmad/html/jones.html
@@ -7,6 +7,9 @@
 <body>
 
 <section><h1>Jones er Best som en hest</h1></section>
+
+<iframe width="420" height="345" src="https://www.youtube.com/watch?v=eJO5HU_7_1w">
+</iframe>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="../js/scripts.js"></script>
 </body>
