--- a/ahmad/html/noah.html
+++ b/ahmad/html/noah.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Noah er best ingen protes, Shape of you</h1>
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=JGwWNGJdvx8">
+<iframe width="420" height="345" src="https://www.youtube.com/embed/JGwWNGJdvx8">
 </iframe>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
